menambahkan file index.html sebagai menu home

--- a/daftar.html
+++ b/daftar.html
@@ -20,8 +20,9 @@
         <div class="col-md-6 left-side">
           <div class="container forms py-3">
             <header>
-                <a href="index.html">
+                <a href="login.html">
                     <img src="assets/img/Logo.svg" alt="logo" width="60" height="60">
+                    
                 </a>
                 <h1>Buat akun baru</h1>
                 <p>Nggak susah kok, kamu cuma tinggal masukin beberapa data aja terus langsung jadi deh!</p>
