menambahkan button pada header

--- a/index.html
+++ b/index.html
@@ -62,16 +62,18 @@
     <!-- header -->
     <div class="container">
       <div class="row border mt-5 position-relative">
-        <div class="col-6 home-left">
+        <div class="col-md-6 home-left">
           <p class="fs-6 fw-lighter">My Family</p>
-          <h1 class="fs-4 pt-3">Sebuah web aplikasi keluarga besar kami yang lengkap untuk silaturahmi, mari buat acara sekarang !</h1>
+          <h1 class="fs-4 pt-1">Sebuah web aplikasi keluarga besar kami yang lengkap untuk silaturahmi, mari buat acara sekarang !</h1>
 
-          <button type="button" class="btn btn-primary position-absolute bottom-0 py-2 px-4">
+
+          <button type="button" class="btn btn-outline-primary py-md-2 px-md-5 me-md-3 mt-md-5">Buat Acara</button>
+          <button type="button" class="btn btn-primary py-md-2 px-md-5">
             <a href="daftar.html" class="text-white text-decoration-none">Registrasi</a>
           </button>
         </div>
 
-        <div class="col-6 home-right">
+        <div class="col-md-6 home-right">
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora, cumque itaque? Impedit, accusantium sapiente consequatur quaerat itaque saepe cum natus doloribus eaque ipsum minima quia eligendi iste, animi quod quo est quasi repudiandae magni sed nihil harum, sint quis. Officiis soluta fugiat esse dolorum dolor tempora eos cum cumque? Consectetur, unde. Fugit deleniti placeat natus dignissimos optio, aliquid nihil nostrum dolorum distinctio molestias eaque iste. Perferendis fugiat voluptatem tempora id. Veritatis necessitatibus quam atque praesentium libero quisquam totam fugiat eaque, at, beatae doloremque maxime. Quis atque dignissimos perferendis quo, nesciunt iusto ea laudantium sed. Magnam autem voluptas delectus ut nobis.</p>
         </div>
       </div>
