--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="row mt-5 position-relative">
         <div class="col-md-6 home-left">
           <p class="fs-6 fw-lighter">My Family</p>
-          <h1 class="fs-4 pt-1">Sebuah web aplikasi keluarga besar kami yang lengkap untuk silaturahmi, mari buat acara sekarang !</h1>
+          <h1 class="pt-1">Sebuah web aplikasi keluarga besar kami yang lengkap untuk silaturahmi, mari buat acara sekarang !</h1>
 
           <div class="btn-acara mt-2">
             <button type="button" class="btn btn-outline-primary py-md-2 px-md-5 me-md-3 mt-md-5">Buat Acara</button>
