merubah rata tengah

--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
           </div>
 
           <div class="total d-flex justify-content-evenly mt-5">
-            <div class="total-acara">
+            <div class="total-acara text-center">
               <h5 class="fw-bold">Total Acara</h5>
                 <p>13</p>
             </div>
-            <div class="total-pengguna">
+            <div class="total-pengguna text-center">
               <h5 class="fw-bold text-md-center">Dilihat</h5>
               <p class="text-center">18 Pengguna</p>
             </div>
