menambahkan gallery pada momen

--- a/index.html
+++ b/index.html
@@ -95,6 +95,25 @@
 
 
 
+    <!-- gallery -->
+
+    <div class="container momen">
+      <h2 class="text-center mb-4">Momen</h2>
+      <div class="images-momen d-flex flex-wrap justify-content-center">
+        <img src="assets/img/momen/1.jpg" alt="image 1" class="img-fluid img-thumbnail rounded-1">
+        <img src="assets/img/momen/2.jpg" alt="image 1" class="img-fluid img-thumbnail rounded-1">
+        <img src="assets/img/momen/3.jpg" alt="image 1" class="img-fluid img-thumbnail rounded-1">
+        <img src="assets/img/momen/4.jpg" alt="image 1" class="img-fluid img-thumbnail rounded-1">
+        <img src="assets/img/momen/5.jpg" alt="image 1" class="img-fluid img-thumbnail rounded-1">
+        <img src="assets/img/momen/6.jpg" alt="image 1" class="img-fluid img-thumbnail rounded-1">
+        <img src="assets/img/momen/7.jpg" alt="image 1" class="img-fluid img-thumbnail rounded-1">
+        <img src="assets/img/momen/8.jpg" alt="image 1" class="img-fluid img-thumbnail rounded-1">
+        <img src="assets/img/momen/9.jpg" alt="image 1" class="img-fluid img-thumbnail rounded-1">
+      </div>
+    </div>
+
+    <!-- akhir gallery -->
+
 
 
 
