--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <!-- My Css -->
     <link rel="stylesheet" href="style.css">
 
+    <!-- responsive -->
+    <link rel="stylesheet" href="responsive/responsive.css">
+
     <title>Home</title>
   </head>
   <body>
@@ -109,6 +112,10 @@
         <img src="assets/img/momen/7.jpg" alt="image 1" class="img-fluid img-thumbnail rounded-1">
         <img src="assets/img/momen/8.jpg" alt="image 1" class="img-fluid img-thumbnail rounded-1">
         <img src="assets/img/momen/9.jpg" alt="image 1" class="img-fluid img-thumbnail rounded-1">
+        <div class="mb-3 mt-4">
+          <label for="formFileSm" class="form-label opacity-75">Masukkan gambar momen keluarga kita</label>
+          <input class="form-control form-control-sm" id="formFileSm" type="file">
+        </div>
       </div>
     </div>
 
