--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
         <img src="assets/img/momen/7.jpg" alt="image 1" class="img-fluid img-thumbnail rounded-1">
         <img src="assets/img/momen/8.jpg" alt="image 1" class="img-fluid img-thumbnail rounded-1">
         <img src="assets/img/momen/9.jpg" alt="image 1" class="img-fluid img-thumbnail rounded-1">
-        <div class="mb-3 mt-4">
-          <label for="formFileSm" class="form-label opacity-75">Masukkan gambar momen keluarga kita</label>
-          <input class="form-control form-control-sm" id="formFileSm" type="file">
+        <div class="mb-3 mt-4 d-flex flex-column" style="width: 60%;">
+          <label for="formFileSm" class="form-label opacity-75 text-center mb-2">Masukkan gambar momen keluarga kita</label>
+          <input class="form-control form-control-sm mx-auto" id="formFileSm" style="width: 60%;" type="file">
         </div>
       </div>
     </div>
