--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <img src="assets/img/momen/7.jpg" alt="image 1" class="img-fluid img-thumbnail rounded-1">
         <img src="assets/img/momen/8.jpg" alt="image 1" class="img-fluid img-thumbnail rounded-1">
         <img src="assets/img/momen/9.jpg" alt="image 1" class="img-fluid img-thumbnail rounded-1">
-        <div class="mb-3 mt-4 d-flex flex-column" style="width: 60%;">
+        <div class= mb-3 mt-4 d-flex flex-column" style="width: 60%;">
           <label for="formFileSm" class="form-label opacity-75 text-center mb-2">Masukkan gambar momen keluarga kita</label>
           <input class="form-control form-control-sm mx-auto" id="formFileSm" style="width: 60%;" type="file">
         </div>
@@ -120,6 +120,19 @@
     </div>
 
     <!-- akhir gallery -->
+
+
+
+
+    <!-- footer -->
+
+    <footer>
+      <div class="container-fluid bg-dark text-white mt-5 d-flex align-items-center justify-content-center" style="height: 200px;">
+        <p class="text-center">Dwiyan Purbo Prastio</p>
+      </div>
+    </footer>
+
+    <!-- akhir footer -->
 
 
 
